src/objects/SRPFieldHistorySetting__mdt.object
<CustomObject>
    <description>Used for determining level of detail recorded by Object in SRP Field History.</description>
    <fields>
        <fullName>blacklist__c</fullName>
        <description>Specific list of fields by api name to exclude in SRP History separated by |.  Example Name|Id|customField__c..</description>
        <inlineHelpText>Please use api names separated by the pipe (|) character. This will override fields listed in whitelist.</inlineHelpText>
        <label>Blacklist</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>excludeFormulaFields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to automatically exclude all formula fields.</description>
        <inlineHelpText>Check to automatically exclude all formula fields.  This will override fields listed in whitelist.</inlineHelpText>
        <label>Exclude Formula Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>objectAPIName__c</fullName>
        <description>API Name of the object that this setting is for.  Example Opportunity or Tract__c</description>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>whitelist__c</fullName>
        <description>Specific list of fields by api name to include in SRP History separated by |.  Example Name|Id|customField__c.  Leave blank to include all fields.</description>
        <inlineHelpText>Please use api names separated by the pipe (|) character. Leave blank to include all fields.</inlineHelpText>
        <label>Whitelist</label>
        <length>13072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SRP Field History Setting</label>
    <pluralLabel>SRP Field Histories Settings</pluralLabel>
</CustomObject>